symln .ideavimrc to .vimrc direclty

--- a/git/.gitignore
+++ b/git/.gitignore
@@ -3,6 +3,9 @@
 .DS_Store
 Thumbs.db
 
+# Jetbrains
+.idea
+
 # Files that might appear on external disks
 .Spotlight-V100
 .Trashes
@@ -18,3 +21,4 @@ Thumbs.db
 *.sass-cache
 *.sw?
 *.vi
+
