--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -1,1 +1,10 @@
-../vim/.vimrc
+source ~/.vimrc
+
+""" Plugins  --------------------------------
+set surround
+
+""" Common settings -------------------------
+set showmode
+set so=5
+set incsearch
+set nu
