--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -132,5 +132,5 @@
 	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
 [commit]
-	template = /Users/jsx/.gitmessage
 	; template = /Users/hux/.stCommitMsg
+	; template = /Users/jsx/.gitmessage
