--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,19 +1,5 @@
 {
   "languageserver": {
-    "fnl": {
-      "command": "fnl",
-      "args": ["-fls"],
-      "filetypes": ["fnl"]
-    },
-    "ocaml": {
-       "command": "ocaml-language-server",
-       "args": ["--stdio"],
-       "filetypes": ["ocaml"]
-     },
-    "reason": {
-      "command": "~/reason/reason-language-server.exe",
-      "filetypes": ["reason"]
-    },
     "bash": {
       "command": "bash-language-server",
       "args": ["start"],
@@ -28,6 +14,5 @@
     }
   },
   "highlight.disableLanguages" : ["markdown"],
-  "diagnostic.virtualText" : false   // prefer floating windows
+  "diagnostic.virtualText" : false
 }
-
